--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "perfcompare",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "https://mozilla.github.io/perfcompare",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -29,6 +29,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-localhost": "PUBLIC_URL=/ react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx}",
     "lint:fix": "eslint src/**/*.{js,jsx} --fix",
@@ -72,12 +73,15 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "jest": "^27.5.1",
-    "prettier": "^2.6.0",
-    "react-scripts": "5.0.0"
+    "prettier": "^2.6.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
       "./src/tests/setupTests.js"
-    ]
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest",
+      "^.+\\.svg$": "<rootDir>/src/tests/utils/fileTransformer.js"
+    }
   }
 }
