--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.7",
     "express": "^4.18.1",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
